--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,21 @@
 body{
     color: salmon;
-    text-align: center;
+    text-align: justify;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 30 px;
+    text-align: center;
 }
