Agregando estilos a la cabecera para mejor visualizacion del contenido del blog

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,5 +21,18 @@ body{
 }
 
 #cabecera{
-    color: slategrey;
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: -20px;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
