--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: salmon;
+    color: rebeccapurple;
     text-align: justify;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
