--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: #413f3f;
+    color: #0ebb42;
     text-align: justify;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 16px;
