modificacion de prueba

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: rebeccapurple;
+    color: rgb(9, 170, 62);
     text-align: justify;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
