--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,16 @@
 body{
+    background-color: #1e1f24;
     color: #bb2280;
     text-align: justify;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     margin: 0;
-    padding: 0;
+    padding: 0.5em;
 }
 
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -17,7 +18,11 @@ body{
 
 #container h1{
     font-size: 30 px;
-    text-align: center;
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
 
 #cabecera{
@@ -35,4 +40,9 @@ body{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
